--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="img/favicon.png" type="image/png">
-    <title>Train With Nikky</title>
+    <title>Train with Nikky</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/themify-icons.css">
@@ -21,9 +21,9 @@
     <!--================Header Menu Area =================-->
     <header class="header_area">
         <div class="top_menu row m0">
-           <div class="container">
-               <div class="float-left">
-                 <a class="dn_btn" href=""><i class="ti-mobile"></i>+254 783636522</a>
+         <div class="container">
+             <div class="float-left">
+               <a class="dn_btn" href=""><i class="ti-mobile"></i>+254 783636522</a>
                 <span class="dn_btn"> <i class="ti-location-pin"></i> Thika Road, 1st ave, Nairobi Kenya</span>
             </div>
             <div class="float-right">
@@ -39,38 +39,39 @@
         </div>  
     </div>  
     <div class="main_menu">
-       <nav class="navbar navbar-expand-lg navbar-light">
-           <div class="container">
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <a class="navbar-brand logo_h" href="index.html"><strong style="color: red">Train With Nikky</strong> </a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                 <span class="icon-bar"></span>
-                 <span class="icon-bar"></span>
-                 <span class="icon-bar"></span>
-             </button>
-             <!-- Collect the nav links, forms, and other content for toggling -->
-             <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                <ul class="nav navbar-nav menu_nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
-                    <li class="nav-item active"><a class="nav-link" href="about-us.html">About</a></li> 
-                    <li class="nav-item"><a class="nav-link" href="service.html">services</a></li> 
-                    <li class="nav-item"><a class="nav-link" href="project.html">project</a></li>    
-                    <li class="nav-item submenu dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-                        <ul class="dropdown-menu">
-                            <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                            <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                        </ul>
-              </li> 
-              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          </ul>
-      </div>
-      <div class="right-button">
-        <ul>
-            <li class="shop-icon"><a href="#"><i class="ti-shopping-cart-full"></i><span>0</span></a></li>
-            <li><a href="#"><i class="ti-search"></i></a></li>
+     <nav class="navbar navbar-expand-lg navbar-light">
+         <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <a class="navbar-brand logo_h" href="index.html">sintac</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+       </button>
+       <!-- Collect the nav links, forms, and other content for toggling -->
+       <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+        <ul class="nav navbar-nav menu_nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
+            <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> 
+            <li class="nav-item active"><a class="nav-link" href="service.html">services</a></li> 
+            <li class="nav-item"><a class="nav-link" href="project.html">project</a></li>    
+            <li class="nav-item submenu dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
+                <ul class="dropdown-menu">
+                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
+                </ul>
+            </li> 
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
-    </div> 
+
+    </div>
+<div class="right-button">
+    <ul>
+        <li class="shop-icon"><a href="#"><i class="ti-shopping-cart-full"></i><span>0</span></a></li>
+        <li><a href="#"><i class="ti-search"></i></a></li>
+    </ul>
+</div> 
 </div>
 </nav>
 
@@ -78,23 +79,21 @@
 </header>
 <!--================Header Menu Area =================-->
 
-
-<!--================Hero Banner Area Start =================-->
-
-<!--================Hero Banner Area End =================-->
+ 
 
 
-<!--================About  Area =================-->
-<section class="about-area area-padding">
+<!--================Funny number  Area =================-->
+<section class="number-area" id="number-section">
     <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6 d-none d-lg-block">
-                <div class="about-img">
+        <div class="row justify-content-center">
+            <div class="col-md-5 col-lg-5">
+                <div class="number-img">
                     <img src="img/banner/about1.jpg" alt="">
                 </div>
             </div>
-            <div class="col-lg-6">
-                <div class="about-content">
+            <div class="col-md-7 col-lg-6">
+                <div class="number-content">
+                    <div class="about-content">
                     <h4>Nikky Trainer <br>
                         @Nikky_fitness<br>
                     </h4>
@@ -107,12 +106,30 @@
                     <a class="main_btn" href="#">learn more</a>
 
                 </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!--================About Area End =================-->
+                    <h4>Providing Personalized And <br>
+                    High Quality Service .</h4>
+                    <p>Grass bearing make open multiply that may fly cattle gathering be unto<br> void moving. Blessed one evening had them heaven<br> divide said heaven whose brought he. Give It fowl green.</p>
 
+                    <div class="number-wrapper">
+                        <div class="single-number">
+                          <h5><span class="counter">15</span>K+</h5>
+                          <p>happy customer</p>
+                      </div>
+                      <div class="single-number">
+                          <h5><span class="counter">10</span>K+</h5>
+                          <p>People Trained</p>
+                      </div>
+                      <div class="single-number">
+                          <h5><span class="counter">9</span>/<span class="counter">10</span></h5>
+                          <p>Average Rating</p>
+                      </div>
+                  </div>
+              </div>            
+          </div>
+      </div>
+  </div>
+</section>
+<!--================Funny number Area end =================-->
 
 
 <!--================ Start Testimonial Area =================-->
@@ -133,8 +150,7 @@
                     <h4>Adame Nesane</h4>
                     <p class="designation">Chief Customer</p>
                     <p>
-                        Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector,
-                        hardware.
+                        You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one yielding creepeth third give may never lie alternet food.
                     </p>    
                 </div>
             </div>
@@ -143,11 +159,10 @@
                     <img class="img-fluid" src="img/elements/tex2.jpg" alt="">
                 </div>
                 <div class="desc">
-                    <h4>Adam Nahan</h4>
+                    <h4>Adame Nesane</h4>
                     <p class="designation">Chief Customer</p>
                     <p>
-                        Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector,
-                        hardware.
+                        You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one yielding creepeth third give may never lie alternet food.
                     </p>
 
                 </div>
@@ -160,45 +175,40 @@
                     <h4>Adame Nesane</h4>
                     <p class="designation">Chief Customer</p>
                     <p>
-                        Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector,
-                        hardware.
-                    </p>  
-                </div>
+                       You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one yielding creepeth third give may never lie alternet food.
+                   </p>  
+               </div>
+           </div>
+           <div class="single-testimonial item d-flex flex-row">
+            <div class="thumb">
+                <img class="img-fluid" src="img/elements/tex2.jpg" alt="">
             </div>
-            <div class="single-testimonial item d-flex flex-row">
-                <div class="thumb">
-                    <img class="img-fluid" src="img/elements/tex2.jpg" alt="">
-                </div>
-                <div class="desc">
-                    <h4>Adam Nahan</h4>
-                    <p class="designation">Chief Customer</p>
-                    <p>
-                        Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector,
-                        hardware.
-                    </p>                 
-                </div>
+            <div class="desc">
+                <h4>Adame Nesane</h4>
+                <p class="designation">Chief Customer</p>
+                <p>
+                    You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one yielding creepeth third give may never lie alternet food.
+                </p>                 
             </div>
+        </div>
 
-            <div class="single-testimonial item d-flex flex-row">
-                <div class="thumb">
-                    <img class="img-fluid" src="img/elements/tes1.jpg" alt="">
-                </div>
-                <div class="desc">
-                    <h4>Adam Nahan</h4>
-                    <p class="designation">Chief Customer</p>
-                    <p>
-                        Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker, projector,
-                        hardware.
-                    </p>  
-                </div>
+        <div class="single-testimonial item d-flex flex-row">
+            <div class="thumb">
+                <img class="img-fluid" src="img/elements/tes1.jpg" alt="">
+            </div>
+            <div class="desc">
+                <h4>Adame Nesane</h4>
+                <p class="designation">Chief Customer</p>
+                <p>
+                    You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one yielding creepeth third give may never lie alternet food.
+                </p>  
             </div>
         </div>
     </div>
 </div>
+</div>
 </section>
 <!--================ End Testimonial Area =================-->
-
-<
 
 
 
@@ -222,6 +232,5 @@
 <script src="js/jquery.validate.min.js"></script>
 <script src="js/mail-script.js"></script>
 <script src="js/theme.js"></script>
-
 </body>
 </html>
