--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="img/favicon.png" type="image/png">
-    <title>Sintec Construction</title>
+    <title>Train with Nikky</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/themify-icons.css">
@@ -23,8 +23,8 @@
         <div class="top_menu row m0">
            <div class="container">
                <div class="float-left">
-                <a class="dn_btn" href=""><i class="ti-mobile"></i>+1 (205) 325-1235</a>
-                <span class="dn_btn"> <i class="ti-location-pin"></i> 4256 Marshville Road, Poughkeepsie, NY 12601</span>
+                <a class="dn_btn" href=""><i class="ti-mobile"></i>+254 783636522</a>
+                <span class="dn_btn"> <i class="ti-location-pin"></i> Thika Road, 1st ave, Nairobi Kenya</span>
             </div>
             <div class="float-right">
                 <span class="follow_us">Follow us: </span>
@@ -53,15 +53,9 @@
                 <ul class="nav navbar-nav menu_nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
                     <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> 
-                    <li class="nav-item"><a class="nav-link" href="service.html">services</a></li> 
-                    <li class="nav-item"><a class="nav-link" href="project.html">project</a></li>    
-                    <li class="nav-item submenu dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-                        <ul class="dropdown-menu">
-                            <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                            <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                        </ul>
-                    </li> 
+                    <li class="nav-item"><a class="nav-link" href="service.html">Events</a></li> 
+                    <li class="nav-item"><a class="nav-link" href="project.html">Fitness Plan</a></li>    
+                    
                     <li class="nav-item active"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -166,21 +160,21 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
-              <h3>Buttonwood, California.</h3>
-              <p>Rosemead, CA 91770</p>
+              <h3>Thika Raod 1st Avenue.</h3>
+              <p>Nairobi, Kenya</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
-              <h3><a href="tel:454545654">00 (440) 9865 562</a></h3>
-              <p>Mon to Fri 9am to 6pm</p>
+              <h3><a href="tel:454545654">+254 7836365222</a></h3>
+              <p>Mon to Sat 4am to 9pm</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3><a href="mailto:support@colorlib.com">support@colorlib.com</a></h3>
+              <h3><a href="mailto:support@colorlib.com">nikkygumo@gmail.com</a></h3>
               <p>Send us your query anytime!</p>
             </div>
           </div>
@@ -190,143 +184,6 @@
   </section>
   <!-- ================ contact section end ================= -->
 
-<!--================ start footer Area =================-->
-<footer class="footer-area ">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4  col-md-6">
-                <div class="single-footer-widget">
-                    <h6>Userful Links</h6>
-                    <div class="row">   
-                        <div class="col-lg-6">
-                           <ul class="footer-nav">
-                            <li><i class="ti-angle-right"></i>
-                                <a href="#">home</a>
-                            </li>
-                            <li><i class="ti-angle-right"></i>
-                                <a href="#">about us</a>
-                            </li>
-                            <li><i class="ti-angle-right"></i>
-                                <a href="#">company news</a>
-                            </li>
-                            <li><i class="ti-angle-right"></i>
-                                <a href="#">projects</a>
-                            </li>
-                            <li><i class="ti-angle-right"></i>
-                                <a href="#">careers</a>
-                            </li>
-                        </ul>
-
-                    </div>
-                    <div class="col-lg-6">
-                       <ul class="footer-nav">
-                        <li><i class="ti-angle-right"></i>
-                            <a href="#">our services</a>
-                        </li>
-                        <li><i class="ti-angle-right"></i>
-                            <a href="#">terms and condition</a>
-                        </li>
-                        <li><i class="ti-angle-right"></i>
-                            <a href="#">shop</a>
-                        </li>
-                        <li><i class="ti-angle-right"></i>
-                            <a href="#">contuct us</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-    </div>
-    <div class="col-lg-4  col-md-6">
-        <div class="single-footer-widget mail-chimp">
-            <h6 class="mb-20">Business Hours</h6>
-            <ul class="business-hour">
-                <li>Monday - Friday : <span>9:00 am - 18:00 pm</span>   </li>
-                <li>Saturday :<span>9:00 am - 16:00 pm</span></li>
-                <li>Sunday :<span>Closed</span></li>
-            </ul>
-            <p>We work all the holidays!</p>
-        </div>
-    </div>
-    <div class="col-lg-4  col-md-12">
-        <div class="single-footer-widget newsletter">
-            <h6>Email Newsletter</h6>
-            <div id="mc_embed_signup">
-                <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                method="get" class="form-inline">
-
-                <div class="form-group row no-gutters">
-                    <div class="col-lg-8 col-md-8 col-7">
-                        <input name="EMAIL" placeholder="Your Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '"
-                        required="" type="email">
-                    </div>
-
-                    <div class="col-lg-4 col-md-4 col-5">
-                        <button class="nw-btn main_btn circle">subscribe
-                            <span class="lnr lnr-arrow-right"></span>
-                        </button>
-                    </div>
-                </div>
-                <div class="info"></div>
-            </form>
-        </div>
-        <p>Sign up for new Recover Construction Company
-        content, updates, surveys & offers.</p>
-        <a class="footer-link" href="#">privacy policy</a>
-    </div>
-</div>
-</div>
-
-
-</div>
-
-<div class="footer-bottom">
-    <div class="container">
-        <div class="row ">
-            <p class="col-lg-12 footer-text "><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
-        </div>    
-    </div>  
-</div>
-
-</footer>
-<!--================ End footer Area =================-->
-
-
-<!--================Contact Success and Error message Area =================-->
-    <div id="success" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <i class="fas fa-times"></i>
-                    </button>
-                    <h2>Thank you</h2>
-                    <p>Your message is successfully sent...</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modals error -->
-
-    <div id="error" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <i class="fas fa-times"></i>
-                    </button>
-                    <h2>Sorry !</h2>
-                    <p> Something went wrong </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--================End Contact Success and Error message Area =================-->
 
 
 
