--- a/about-us.html
+++ b/about-us.html
@@ -51,18 +51,12 @@
        <!-- Collect the nav links, forms, and other content for toggling -->
        <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
         <ul class="nav navbar-nav menu_nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
-            <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> 
-            <li class="nav-item active"><a class="nav-link" href="service.html">services</a></li> 
-            <li class="nav-item"><a class="nav-link" href="project.html">project</a></li>    
-            <li class="nav-item submenu dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-                <ul class="dropdown-menu">
-                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                </ul>
-            </li> 
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
+                    <li class="nav-item active"><a class="nav-link" href="about-us.html">About</a></li> 
+                    <li class="nav-item"><a class="nav-link" href="service.html">Events</a></li> 
+                    <li class="nav-item"><a class="nav-link" href="project.html">Fitness Plans </a></li>    
+                    
+              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
 
     </div>
@@ -88,7 +82,7 @@
         <div class="row justify-content-center">
             <div class="col-md-5 col-lg-5">
                 <div class="number-img">
-                    <img src="img/banner/about1.jpg" alt="">
+                    <img src="img/banner/about.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-7 col-lg-6">
