--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="img/favicon.png" type="image/png">
-    <title>Sintec Construction</title>
+    <title>Train With Nikky</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/themify-icons.css">
@@ -23,8 +23,8 @@
         <div class="top_menu row m0">
            <div class="container">
                <div class="float-left">
-                <a class="dn_btn" href=""><i class="ti-mobile"></i>+1 (205) 325-1235</a>
-                <span class="dn_btn"> <i class="ti-location-pin"></i> 4256 Marshville Road, Poughkeepsie, NY 12601</span>
+                <a class="dn_btn" href=""><i class="ti-mobile"></i>+254 783636522</a>
+                <span class="dn_btn"> <i class="ti-location-pin"></i> Thika Road, 1st ave, Nairobi Kenya</span>
             </div>
             <div class="float-right">
                 <span class="follow_us">Follow us: </span>
@@ -53,15 +53,9 @@
                 <ul class="nav navbar-nav menu_nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
                     <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> 
-                    <li class="nav-item"><a class="nav-link" href="service.html">services</a></li> 
-                    <li class="nav-item active"><a class="nav-link" href="project.html">project</a></li>    
-                    <li class="nav-item submenu dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-                        <ul class="dropdown-menu">
-                            <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                            <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                        </ul>
-                    </li> 
+                    <li class="nav-item"><a class="nav-link" href="service.html">Events</a></li> 
+                    <li class="nav-item active"><a class="nav-link" href="project.html">Fitness Plans </a></li>    
+                   
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -78,38 +72,22 @@
 </header>
 <!--================Header Menu Area =================-->
 
- 
-  <!--================Hero Banner Area Start =================-->
-  <section class="hero-banner hero-banner-sm">
-    <div class="container text-center">
-      <h2>Our Project</h2>
-      <nav aria-label="breadcrumb" class="banner-breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="#">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Project</li>
-        </ol>
-      </nav>
-    </div>
-  </section>
-  <!--================Hero Banner Area End =================-->
-
 
 <!--================ Start Portfolio Area =================-->
 <section class="portfolio_area area-padding" id="portfolio">
     <div class="container">
      <div class="area-heading">
-        <h3 class="line">Our Recent Project</h3>
-        <p>Together female let signs for for fish fowl may first.</p>
+        <h3 class="line">Fitness Plans </h3>
 
     </div>
 
     <div class="filters portfolio-filter">
         <ul>
             <li class="active" data-filter="*">all</li>
-            <li data-filter=".popular">buildings</li>
-            <li data-filter=".latest"> offices</li>
-            <li data-filter=".following">rebuild</li>
-            <li data-filter=".upcoming">architecture</li>
+            <li data-filter=".popular">Aerobics</li>
+            <li data-filter=".latest"> Zumba</li>
+            <li data-filter=".following">BodyBuild</li>
+            <li data-filter=".upcoming">Diets</li>
         </ul>
     </div>
 
@@ -162,192 +140,6 @@
 </div>
 </section>
 <!--================ End Portfolio Area =================-->
-
-
-
-<!--================ Start Testimonial Area =================-->
-<section class="testimonial-area area-padding">
-    <div class="container">
-     <div class="area-heading">
-        <h3 class="line">Customer reviews</h3>
-        <p>Together female let signs for for fish fowl may first.</p>
-
-    </div>
-    <div class="row">
-        <div class="active-testimonial-carusel owl-carousel">
-            <div class="single-testimonial item d-flex flex-row">
-                <div class="thumb">
-                    <img class="img-fluid" src="img/elements/tes1.jpg" alt="">
-                </div>
-                <div class="desc">
-                    <h4>Adame Nesane</h4>
-                    <p class="designation">Chief Customer</p>
-                    <p>
-                        You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one yielding creepeth third give may never lie alternet food.
-                    </p>    
-                </div>
-            </div>
-            <div class="single-testimonial item d-flex flex-row">
-                <div class="thumb">
-                    <img class="img-fluid" src="img/elements/tex2.jpg" alt="">
-                </div>
-                <div class="desc">
-                    <h4>Adame Nesane</h4>
-                    <p class="designation">Chief Customer</p>
-                    <p>
-                        You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one yielding creepeth third give may never lie alternet food.
-                    </p>
-
-                </div>
-            </div>
-            <div class="single-testimonial item d-flex flex-row">
-                <div class="thumb">
-                    <img class="img-fluid" src="img/elements/tes1.jpg" alt="">
-                </div>
-                <div class="desc">
-                    <h4>Adame Nesane</h4>
-                    <p class="designation">Chief Customer</p>
-                    <p>
-                       You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one yielding creepeth third give may never lie alternet food.
-                   </p>  
-               </div>
-           </div>
-           <div class="single-testimonial item d-flex flex-row">
-            <div class="thumb">
-                <img class="img-fluid" src="img/elements/tex2.jpg" alt="">
-            </div>
-            <div class="desc">
-                <h4>Adame Nesane</h4>
-                <p class="designation">Chief Customer</p>
-                <p>
-                    You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one yielding creepeth third give may never lie alternet food.
-                </p>                 
-            </div>
-        </div>
-
-        <div class="single-testimonial item d-flex flex-row">
-            <div class="thumb">
-                <img class="img-fluid" src="img/elements/tes1.jpg" alt="">
-            </div>
-            <div class="desc">
-                <h4>Adame Nesane</h4>
-                <p class="designation">Chief Customer</p>
-                <p>
-                    You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one yielding creepeth third give may never lie alternet food.
-                </p>  
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-</section>
-<!--================ End Testimonial Area =================-->
-
-<!--================ start footer Area =================-->
-<footer class="footer-area ">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4  col-md-6">
-                <div class="single-footer-widget">
-                    <h6>Userful Links</h6>
-                    <div class="row">   
-                        <div class="col-lg-6">
-                           <ul class="footer-nav">
-                            <li><i class="ti-angle-right"></i>
-                                <a href="#">home</a>
-                            </li>
-                            <li><i class="ti-angle-right"></i>
-                                <a href="#">about us</a>
-                            </li>
-                            <li><i class="ti-angle-right"></i>
-                                <a href="#">company news</a>
-                            </li>
-                            <li><i class="ti-angle-right"></i>
-                                <a href="#">projects</a>
-                            </li>
-                            <li><i class="ti-angle-right"></i>
-                                <a href="#">careers</a>
-                            </li>
-                        </ul>
-
-                    </div>
-                    <div class="col-lg-6">
-                       <ul class="footer-nav">
-                        <li><i class="ti-angle-right"></i>
-                            <a href="#">our services</a>
-                        </li>
-                        <li><i class="ti-angle-right"></i>
-                            <a href="#">terms and condition</a>
-                        </li>
-                        <li><i class="ti-angle-right"></i>
-                            <a href="#">shop</a>
-                        </li>
-                        <li><i class="ti-angle-right"></i>
-                            <a href="#">contuct us</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-    </div>
-    <div class="col-lg-4  col-md-6">
-        <div class="single-footer-widget mail-chimp">
-            <h6 class="mb-20">Business Hours</h6>
-            <ul class="business-hour">
-                <li>Monday - Friday : <span>9:00 am - 18:00 pm</span>   </li>
-                <li>Saturday :<span>9:00 am - 16:00 pm</span></li>
-                <li>Sunday :<span>Closed</span></li>
-            </ul>
-            <p>We work all the holidays!</p>
-        </div>
-    </div>
-    <div class="col-lg-4  col-md-12">
-        <div class="single-footer-widget newsletter">
-            <h6>Email Newsletter</h6>
-            <div id="mc_embed_signup">
-                <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                method="get" class="form-inline">
-
-                <div class="form-group row no-gutters">
-                    <div class="col-lg-8 col-md-8 col-7">
-                        <input name="EMAIL" placeholder="Your Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '"
-                        required="" type="email">
-                    </div>
-
-                    <div class="col-lg-4 col-md-4 col-5">
-                        <button class="nw-btn main_btn circle">subscribe
-                            <span class="lnr lnr-arrow-right"></span>
-                        </button>
-                    </div>
-                </div>
-                <div class="info"></div>
-            </form>
-        </div>
-        <p>Sign up for new Recover Construction Company
-        content, updates, surveys & offers.</p>
-        <a class="footer-link" href="#">privacy policy</a>
-    </div>
-</div>
-</div>
-
-
-</div>
-
-<div class="footer-bottom">
-    <div class="container">
-        <div class="row ">
-            <p class="col-lg-12 footer-text "><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
-        </div>    
-    </div>  
-</div>
-
-</footer>
-<!--================ End footer Area =================-->
-
 
 
 
